# google-authentication-work

./: README.md  sample.env
app/: pyproject.toml
app/app/: callback_mode.py  main.py  oidc_mode.py  redirect_mode.py  settings.py
app/static/js/: common.js
app/templates/: callback_mode.html  gtoken.html  index.html  login.html  oidc_mode.html  oidc_mode_code.html  redirect_mode.html  redirect_mode_verify.html
app/templates/callback_mode/: index.html
app/templates/oidc_mode/: code.html  index.html
app/templates/redirect_mode/: index.html  verify.html
